WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
135148
[Cocoa] WKScriptMessageHandlers don't seem to function properly after navigating
https://bugs.webkit.org/show_bug.cgi?id=135148
Summary
[Cocoa] WKScriptMessageHandlers don't seem to function properly after navigating
Sam Weinig
Reported
2014-07-21 22:37:14 PDT
[Cocoa] WKScriptMessageHandlers don't seem to function properly after navigating
Attachments
Patch
(14.92 KB, patch)
2014-07-21 22:43 PDT
,
Sam Weinig
ggaren
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Sam Weinig
Comment 1
2014-07-21 22:43:15 PDT
Created
attachment 235269
[details]
Patch
Geoffrey Garen
Comment 2
2014-07-22 11:13:42 PDT
Comment on
attachment 235269
[details]
Patch r=me
Sam Weinig
Comment 3
2014-07-22 12:49:28 PDT
Fixed in
r171355
.
Sam Weinig
Comment 4
2014-07-22 12:49:42 PDT
<
rdar://problem/17735912
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug